# My_DiscoveryRepo

./: Cargo.toml  README.md
Hello_from_stm32/: Cargo.toml  openocd.gdb
Hello_from_stm32/.cargo/: config
Hello_from_stm32/src/: main.rs
Registers/: Cargo.toml
Registers/blink_led_using_address/: Cargo.toml
Registers/blink_led_using_address/src/: main.rs
Registers/type_safe_address/: Cargo.toml
Registers/type_safe_address/src/: main.rs
Registers/using_badd_address/: Cargo.toml
Registers/using_badd_address/src/: main.rs
blink_using_moder_odr/: Cargo.toml  README.md
blink_using_moder_odr/.cargo/: config
blink_using_moder_odr/src/: main.rs
clock_timers/: Cargo.toml  README.md
clock_timers/.cargo/: config.toml
clock_timers/src/: main.rs
i2c_protocol/.cargo/: config.toml
i2c_protocol/src/: main.rs
src/: main.rs
src/config/: initialization.rs
stm32_my_findings/: Cargo.toml
stm32_my_findings/.cargo/: config
stm32_my_findings/chapter_5/: Cargo.toml
stm32_my_findings/chapter_5/src/: main.rs
stm32_my_findings/led_blink_delay/: Cargo.toml  memory.x
stm32_my_findings/led_blink_delay/src/: main.rs
stm32_my_findings/led_blink_using_myaux/: Cargo.toml
stm32_my_findings/led_blink_using_myaux/my_auxillary/: Cargo.toml
stm32_my_findings/led_blink_using_myaux/my_auxillary/src/: lib.rs
stm32_my_findings/led_blink_using_myaux/src/: main.rs
