[package]
name = "chapter_5"
version = "0.1.0"
authors = ["Nitin Saxena <Nitin.Saxena@knoldus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6.13"
stm32f3-discovery = "0.6.0"
panic-halt = "0.2.0"
stm32f3xx-hal = { version = "0.6.1", features = ["rt", "stm32f303xc"] }